--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,12 @@
       <span class="centered">Caravan</span>
       <!-- <i *ngIf="route == '/'"></i> -->
     </div>
-    <div class="header-item" [ngClass]="{ 'active' : route == '/rent' }" routerLink='/rent'>
-      <span class="centered">Rent</span>
+    <div class="header-item" [ngClass]="{ 'active' : route == '/listings' }" routerLink='/listings'>
+      <span class="centered">Listings</span>
       <!-- <i *ngIf="route == '/rent'"></i> -->
     </div>
-    <div class="header-item" [ngClass]="{ 'active' : route == '/lend' }" routerLink='/lend'>
-      <span class="centered">Lend</span>
+    <div class="header-item" [ngClass]="{ 'active' : route == '/new' }" routerLink='/new'>
+      <span class="centered">Create</span>
       <!-- <i *ngIf="route == '/lend'"></i> -->
     </div>
     <div class="header-item" [ngClass]="{ 'active' : route == '/buy' }" routerLink='/buy'>
