--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -8,7 +8,7 @@
     <p *ngIf="!ownedRentalLoading && !ownedRentalListings.length">No owned liquidity :(</p>
     <span *ngIf="ownedRentalLoading && !ownedRentalListings.length"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>
     <div class="listing" *ngFor="let listing of ownedRentalListings">
-        <app-rental-listing (updateEvent)="getOwnedRental()" [listing]="listing" [isRenter]="false" [isOwner]="true"></app-rental-listing>
+        <app-listing (updateEvent)="getOwnedRental()" [listing]="listing" [isRenter]="false" [isOwner]="true"></app-listing>
     </div>
     <p *ngIf="loading">Transaction in progress...</p>
 </div>
@@ -17,7 +17,7 @@
     <p class="title">Rented Liquidity</p>
     <p *ngIf="!rentedLoading && !rentedListings.length">No rented liquidity :(</p>
     <span *ngIf="rentedLoading && !rentedListings.length"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>    <div class="listing" *ngFor="let listing of rentedListings">
-        <app-rental-listing (updateEvent)="getRented()" [listing]="listing" [isRenter]="true" [isOwner]="false"></app-rental-listing>
+        <app-listing (updateEvent)="getRented()" [listing]="listing" [isRenter]="true" [isOwner]="false"></app-listing>
     </div>
     <p *ngIf="loading">Transaction in progress...</p>
 </div>
