--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,7 +11,7 @@
         </span>
     </p>
     <div class="centered">
-        <button routerLink="/rent" class="button button--mimas">
+        <button routerLink="/listings" class="button button--mimas">
             <span>See Listings</span>
         </button>
     </div>
