--- a/src/app/components/marketplace/listings/listings.component.html
+++ b/src/app/components/marketplace/listings/listings.component.html
@@ -1,6 +1,6 @@
 <div class="centered">
     <p *ngIf="loading || listings.length > 0" class="title">
-        Liquidity for Rent
+        Liquidity: <span>Rent</span>/<span >Buy</span>
     </p>
     <p class="title" *ngIf="!listings.length && !loading">No Listings :c</p>
 </div>
