--- a/src/app/components/marketplace/new-listing/new-listing.component.css
+++ b/src/app/components/marketplace/new-listing/new-listing.component.css
@@ -100,3 +100,8 @@ body, i {
       display:flex;
       flex-direction: row;
   }
+
+  .listing-type {
+    margin-left: auto;
+    height: 32px;
+  }
