--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -8,7 +8,12 @@
     <p *ngIf="!ownedRentalLoading && !ownedRentalListings.length">No owned liquidity :(</p>
     <span *ngIf="ownedRentalLoading && !ownedRentalListings.length"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>
     <div class="listing" *ngFor="let listing of ownedRentalListings">
-        <app-listing (updateEvent)="getOwnedRental()" [listing]="listing" [isRenter]="false" [isOwner]="true"></app-listing>
+        <app-listing (updateEvent)="getOwnedRental()" 
+        [listing]="listing" 
+        [isRenter]="false" 
+        [isOwner]="true"
+        [isRental]="listing.durationInSeconds != -1">
+    </app-listing>
     </div>
     <p *ngIf="loading">Transaction in progress...</p>
 </div>
