--- a/src/app/components/marketplace/listing-details/listing-details.component.html
+++ b/src/app/components/marketplace/listing-details/listing-details.component.html
@@ -1,6 +1,6 @@
 <div class="centered">
     <p class="title">
-        #{{tokenId}}
+        {{listing.durationInSeconds != -1 ? "Rental" : "Sale "}} #{{tokenId}}
     </p>
     <div *ngIf="!isNullListing()">
         <div class="image-div centered">
