--- a/src/app/components/marketplace/listings/listings.component.html
+++ b/src/app/components/marketplace/listings/listings.component.html
@@ -102,3 +102,17 @@
     </div>
     <span *ngIf="loading"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>
 </div>
+<div class="centered listings-div">
+    <div class="listing" *ngFor="let listing of optionListings">
+        <app-listing 
+            (updateEvent)="getListings()" 
+            [listing]="listing"
+            [isRental]="false"
+            [isRenter]="false" 
+            [isOwner]="false"
+            [ethPrice]="ethPrice"
+            [isOption]="true"
+        >    
+        </app-listing>
+    </div>
+</div>
