--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -9,11 +9,20 @@
     <span *ngIf="ownedRentalLoading && !ownedRentalListings.length"><mat-spinner style="margin: auto;" diameter="25"></mat-spinner></span>
     <div class="listing" *ngFor="let listing of ownedRentalListings">
         <app-listing (updateEvent)="getOwnedRental()" 
-        [listing]="listing" 
-        [isRenter]="false" 
-        [isOwner]="true"
-        [isRental]="listing.durationInSeconds != -1">
-    </app-listing>
+            [listing]="listing" 
+            [isRenter]="false" 
+            [isOwner]="true"
+            [isRental]="listing.durationInSeconds != -1">
+        </app-listing>
+    </div>
+    <div class="listing" *ngFor="let listing of ownedOptions">
+        <app-listing
+            [listing]="listing" 
+            [isRenter]="false" 
+            [isOwner]="true"
+            [isRental]="false"
+            [isOption]="true">
+        </app-listing>
     </div>
     <p *ngIf="loading">Transaction in progress...</p>
 </div>
