--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,12 +2,10 @@
     <p class="title">
         Caravan
         <br>
+        <img class="caravan-logo" src="/assets/camel1.svg">
+        <br>
         <span class="subtitle">
             A new market for liquidity positions.
-            <br>
-            Rent liquidity from liquidity providers. 
-            <br>
-            Rent liquidity to others.
         </span>
     </p>
     <div class="centered">
@@ -15,48 +13,21 @@
             <span>See Listings</span>
         </button>
     </div>
+    <div class="centered">
+        
+    </div>
     <br>
     <div class="centered about">
         <p class="subtitle">
-            How It Works
-        </p>
-        <div class="text-div">
-            <p class="textblock ">
-                Liquidity providers can rent out their positions for a fixed duration for an up-front lump sum to renters, 
-                <br>
-                who are able to collect fees from the position for the duration of the rental. 
-                <br>
-                Providers will be able to hold their positions long term but  receive guaranteed cash flow in the short term. 
-                <br>
-                Renters can profit by collecting fees from positions without holding the underlying assets.
-            </p>
-        </div>
-        
-        <p class="subtitle">
-            For Liquidity Providers
+            Features
         </p>
         <div class="text-div">
             <p class="textblock">
-                • Explore innovative new ways to yield farm on liquidity positions
+                • Rent, buy, sell, and swap liquidity positions
                 <br>
-                • Generate cash flow on liquidity positions without risk
+                • Sell call options using liquidity positions
                 <br>
-                • Hedge against short term downside volatility while keeping tokens long term
-                <br>
-                • Trade positions with other liquidity providers without having to pull tokens out of the pool
-            </p>
-        </div>
-        
-        <p class="subtitle">
-            For Liquidity Renters
-        </p>
-        <div class="text-div">
-            <p class="textblock">
-                • Speculate on the short term liquidity market
-                <br>
-                • Hedge long term positions by renting concentrated liquidity at a lower price range
-                <br>
-                • Gain exposure to liquidity positions without needing to hold actual tokens
+                • Buy synthetic calls to speculate on token prices
             </p>
         </div>
 
